--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 1. Players born between 1987 to 1990"
+    "# Question 1. Write a SQL query that lists all the players born between 1987 and 1990 inclusive, sort them from the oldest to the youngest.  : "
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 2"
+    "# Question 2: Write a SQL query that ranks all countries and leagues based on the total amount of total goals scored per game in the whole dataset. Sort them by the largest to the smallest amount of goals. "
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 3"
+    "# Question 3: Write a SQL query that ranks all teams by the average of all their attributes (not the players' attributes), sort them from best to worst.  "
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 4"
+    "# Question 4:  Write a SQL query that ranks all teams by the average of their players' attributes, sort them by descending order displaying only the top 5. "
    ]
   },
   {
@@ -140,14 +140,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(' Team Name, Number of Players, Player Attribute Average ')\n",
+    "print(' Team Name,  Number of Players,  Player Attribute Average ')\n",
     "print('-'*50)\n",
-    "qry4 = f'SELECT team_long_name, AVG(overall_rating+crossing+finishing\\\n",
-    "       +heading_accuracy+short_passing+volleys+dribbling+curve+free_kick_accuracy+long_passing+ball_control+acceleration)\\\n",
-    "       FROM Team, Player_Attributes WHERE team_fifa_api_id = player_fifa_api_id\\\n",
-    "       GROUP BY team_fifa_api_id ORDER BY\\\n",
-    "       AVG(overall_rating+crossing+finishing+heading_accuracy+short_passing+volleys+dribbling+curve+free_kick_accuracy\\\n",
-    "       +long_passing+ball_control+acceleration) DESC LIMIT 5'\n",
+    "qry4 = f'SELECT team_long_name, count(player_fifa_api_id), AVG(overall_rating)\\\n",
+    "       FROM Team, Player_Attributes WHERE team_fifa_api_id = player_fifa_api_id GROUP BY team_fifa_api_id \\\n",
+    "       ORDER BY AVG(overall_rating) DESC LIMIT 5'\n",
     "for res in cursor.execute(qry4):\n",
     "    print(res)"
    ]
@@ -156,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 5"
+    "# Question 5:  Write a SINGLE SQL query that finds the date that had the most goals scored on, per each different season and league. "
    ]
   },
   {
@@ -178,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Graduate Student Task"
+    "# Graduate Student Task: Write a SINGLE SQL query that finds the top 5 teams in terms of goals scored PER league for the 2008/2009 season. "
    ]
   },
   {
